--- a/html-Avancado/video-Controle/css/style.css
+++ b/html-Avancado/video-Controle/css/style.css
@@ -1,11 +1,20 @@
+body {
+    background-color: darkgoldenrod;
+}
+
 .container {
     position: relative;
     width: 640px;
     height: 360px;
+    margin: auto;
+    margin-top: 200px;
 }
 
 .video {
     width: 100%;
+    border: solid 2px;
+    border-radius: 10px;
+    color: black;
 }
 
 .controle {
