--- a/css-Avancado/style.css
+++ b/css-Avancado/style.css
@@ -7,14 +7,19 @@
 }
 
 .r1 {
+    align-self: center;
+    flex-grow: 1;
     background-color: red;
 }
 
 .r2 {
+    order: -1;
+    flex-grow: 1;
     background-color: green;
 }
 
 .r3 {
+    flex-grow: 1;
     background-color: blue;
 }
 
